# Aistocktrader

./: README.md  pyproject.toml
scripts/: run_backtest.py  run_live.py
src/aistocktrader/: __init__.py
src/aistocktrader/backtest/: engine.py
src/aistocktrader/config/: settings.py
src/aistocktrader/data/: ingestion.py
src/aistocktrader/execution/: auto_exit.py  oms.py
src/aistocktrader/features/: indicators.py
src/aistocktrader/ml/: training.py
src/aistocktrader/risk/: position_sizing.py
src/aistocktrader/strategies/: base.py
tests/: test_auto_exit.py  test_backtest.py  test_indicators.py
